# video-gif-converter

./: README.md  main.py  main_window.py  mpv_widget.py  pyproject.toml  video_player.py
